--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "ReactNative-INSTAGRAMClone",
     "slug": "ReactNative-INSTAGRAMClone",
-    "schema":"igSchema",
+    "scheme":"igSchema",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
